--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,22 @@
   "name": "Better Caculator",
   "description": "A calculator extension for Ulauncher",
   "developer_name": "Tuan pham",
-  "icon": "images/calculator-icon.svg",
-  "python_version": "3.8",
-  "ulauncher_version": "5.x",
-  "preferences": [
-    {
-      "id": "keyword",
-      "type": "keyword",
-      "name": "Keyword",
-      "description": "The keyword to use for the calculator",
-      "default_value": "="
-    }
-  ],
+  "icon": "images/icon.svg",
   "dependencies": {
     "python": {
       "file": "requirements.txt"
     }
-  }
+  },
+  "options": {
+    "query_debounce": 0.1
+  },
+  "preferences": [
+    {
+      "id": "keyword",
+      "type": "keyword",
+      "name": "Better Caculator",
+      "description": "The keyword to use for the calculator",
+      "default_value": "="
+    }
+  ]
 }
