--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "required_api_version": "^2.0.0",
-  "name": "Better Caculator",
+  "name": "Better Calculator",
   "description": "A calculator extension for Ulauncher",
   "developer_name": "Tuan pham",
   "icon": "images/icon.svg",
@@ -16,7 +16,7 @@
     {
       "id": "keyword",
       "type": "keyword",
-      "name": "Better Caculator",
+      "name": "Better Calculator",
       "description": "The keyword to use for the calculator",
       "default_value": "="
     }
